Fixed caption spacing

--- a/style.css
+++ b/style.css
@@ -130,10 +130,13 @@ figcaption {
         position: absolute;
         bottom: 0;
         width: 100%;
-        line-height: 3em;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding: 0 1em;
+}
+figcaption a {
+        line-height: 3em;
 }
 figcaption i {
         vertical-align: middle;
